--- a/matelcli.1
+++ b/matelcli.1
@@ -34,6 +34,43 @@ is a member.
 lists the Matrix spaces of which the user of
 .Nm matelcli
 is a member.
+.Sh SENDING MESSAGES
+.Nm matelcli send
+.Op text | file
+.Ar target
+.Nm to
+.Ar roomid
+.Pp
+The
+.Nm send
+command is used to send messages to the Matrix room whose ID is
+specified as
+.Ar roomId .
+.Pp
+.Ar roomId
+is of the format
+.Dq #[roomname]:[homeserver] ,
+e.g.,
+.Dq #furrytech:matrix.org ,
+which VARIK finds to be a damn fine chatroom.
+.Pp
+.Nm matelcli send text
+.Ar target
+.Nm to
+.Ar roomId
+sends the string
+.Ar target
+to the Matrix room
+.Ar roomId .
+.Pp
+.Nm matelcli send file
+.Ar target
+.Nm to
+.Ar roomId
+sends the file which is located at file path
+.Ar target
+to the Matrix room
+.Ar roomId .
 .Sh AUTHOR
 .Nm matelcli
 is maintained by
