matelcli.1: s/target/rooms | communities | spaces/

--- a/matelcli.1
+++ b/matelcli.1
@@ -14,7 +14,7 @@ interface, as opposed to the terminal user interface of
 .Xr matel 1 .
 .Sh LISTING STUFF
 .Nm matelcli list
-.Ar target
+.Op rooms | communities | spaces
 .Pp
 The
 .Nm list
