--- a/matelcli.1
+++ b/matelcli.1
@@ -103,6 +103,15 @@ fetches the
 .Ar n
 earliest messages of room
 .Ar roomId .
+.Sh MARKING MESSAGES AS HAVING BEEN READ
+Where
+.Ar k
+is a message identifier which is known to be valid,
+.Nm matelcli
+.Ar markread k
+marks the message whose message identifier is
+.Ar k
+as having been read.
 .Sh AUTHOR
 .Nm matelcli
 is maintained by
