MATELCLI: The "login" command is added.

--- a/matelcli.1
+++ b/matelcli.1
@@ -112,6 +112,11 @@ is a message identifier which is known to be valid,
 marks the message whose message identifier is
 .Ar k
 as having been read.
+.Sh ENTERING THE MATRIX
+Using the username and password which are specified in Config.hs,
+.Nm matelcli login
+generates a new authorisation token for the user's Matrix account and
+prints this authorisation token to the standard output.
 .Sh AUTHOR
 .Nm matelcli
 is maintained by
