matelcli.1: Markup improves.

--- a/matelcli.1
+++ b/matelcli.1
@@ -107,8 +107,8 @@ earliest messages of room
 Where
 .Ar k
 is a message identifier which is known to be valid,
-.Nm matelcli
-.Ar markread k
+.Nm matelcli markread
+.Ar k
 marks the message whose message identifier is
 .Ar k
 as having been read.
