matelcli.1: Some benefits of this user interface are mentioned.

--- a/matelcli.1
+++ b/matelcli.1
@@ -12,6 +12,9 @@
 is used to perform various Matrix-related tasks via a command-line
 interface, as opposed to the terminal user interface of
 .Xr matel 1 .
+.Pp
+The benefits of this user interface include but are not limited to
+scriptability, intuitiveness, and a decent number of Easter eggs.
 .Sh LISTING STUFF
 .Nm matelcli list
 .Op rooms | communities | spaces
