matelcli.1: A comma is added.

--- a/matelcli.1
+++ b/matelcli.1
@@ -187,7 +187,7 @@ the standard error.
 .Nm matelcli kick Ar user roomid
 .Pp
 Assuming that Matel's user has the appropriate permissions and
-everything else goes well
+everything else goes well,
 .Nm matelcli kick Ar user roomid
 kicks the user whose Matrix ID is
 .Ar user
