matelcli.1: Another advantage of send's current implementation is mentioned.

--- a/matelcli.1
+++ b/matelcli.1
@@ -58,6 +58,9 @@ is as follows:
 .Bd -literal -offset indent
 matelcli send text dummies < methage
 .Ed
+.Pp
+Additionally, using the standard input-based approach facilitates
+sending arbitrary characters in the bodies of messages.
 .Ss SENDING FILES
 .Nm matelcli send file
 .Ar path
