matelcli.1: s/Aq/Aq Mt/

--- a/matelcli.1
+++ b/matelcli.1
@@ -197,4 +197,4 @@ is maintained by
 .An Varik
 .An Dq NOT A COMPUTER PROGRAMMER!!!
 .An Valefor
-.Aq varikvalefor@aol.com .
+.Aq Mt varikvalefor@aol.com .
