matelcli.1: A qualifier is added.

--- a/matelcli.1
+++ b/matelcli.1
@@ -46,7 +46,7 @@ room whose internal Matrix ID is
 .Ar room .
 .Pp
 One advantage of using this standard input-based approach is being able
-to send the contents of files as text-based messages.  Assuming that
+to send the contents of suitably short files as text-based messages.  Assuming that
 .Pa methage
 contains printable text and
 .Ar dummies
