matelcli.1: A neat little factoid is added.

--- a/matelcli.1
+++ b/matelcli.1
@@ -15,6 +15,9 @@ interface, as opposed to the terminal user interface of
 .Pp
 The benefits of this user interface include but are not limited to
 scriptability, intuitiveness, and a decent number of Easter eggs.
+Additionally,
+.Nm matelcli
+can theoretically be accessed from teletypewriters, which is cool.
 .Sh LISTING STUFF
 .Nm matelcli list
 .Op rooms | communities | spaces
