matelcli.1: Markup improves.

--- a/matelcli.1
+++ b/matelcli.1
@@ -73,7 +73,7 @@ sends the file whose path is
 .Ar path
 to the Matrix room whose internal Matrix ID is
 .Ar room .
-.Sh GRABBING PILLS, IF ``PILLS'' REFERS TO MESSAGES
+.Sh GRABBING PILLS, IF "PILLS" REFERS TO MESSAGES
 .Nm matelcli grab
 .Ar n
 .Op recent | first
