--- a/matelcli.1
+++ b/matelcli.1
@@ -232,3 +232,4 @@ is maintained by
 .An Dq NOT A COMPUTER PROGRAMMER!!!
 .An Valefor
 .Aq Mt varikvalefor@aol.com .
+Hate mail should be forwarded accordingly.
