--- a/matel.1
+++ b/matel.1
@@ -18,7 +18,7 @@ is currently pretty useless; the layout specification which is contained
 within this document may change at any time... and is not even
 implemented, anyway.  Until
 .Nm matel
-is completed, potential users of
+actually works, potential users of
 .Nm matel
 may use
 .Xr matelcli 1
