matelcli.1: A section regarding bug reports is added.

--- a/matelcli.1
+++ b/matelcli.1
@@ -294,6 +294,9 @@ instances for Matel users.  But men who wish to request custom
 instances should ensure that the desired
 .Dq Show
 instance does not already exist.
+.Sh BUG REPORTS
+Bug reports should be sent to the maintainer or posted to
+.Lk http://github.com/varikvalefor/matel/issues Matel's issue page .
 .Sh AUTHOR
 .Nm matelcli
 is maintained by
