--- a/matelcli.1
+++ b/matelcli.1
@@ -18,6 +18,9 @@ scriptability, intuitiveness, and a decent number of Easter eggs.
 Additionally,
 .Nm matelcli
 can theoretically be accessed from teletypewriters, which is cool.
+.Sh CONFIGURATION
+The details of the configuration file are described in
+.Xr matel 1 .
 .Sh LISTING STUFF
 .Nm matelcli list
 .Op rooms | communities | spaces
@@ -297,6 +300,8 @@ instance does not already exist.
 .Sh BUG REPORTS
 Bug reports should be sent to the maintainer or posted to
 .Lk http://github.com/varikvalefor/matel/issues Matel's issue page .
+.Sh SEE ALSO
+.Xr matel 1
 .Sh AUTHOR
 .Nm matelcli
 is maintained by
