A comma is deleted.

--- a/matelcli.1
+++ b/matelcli.1
@@ -261,7 +261,7 @@ If some weird error is encountered, then a description of this error is
 written to the standard output.
 .Sh CREATING ROOMS
 .Nm matelcli
-.Ar roomname topic permission ,
+.Ar roomname topic permission
 creates a Matrix room whose display name and topic are
 .Ar roomname
 and
