A missing command name is added.

--- a/matelcli.1
+++ b/matelcli.1
@@ -260,7 +260,7 @@ from the Matrix room whose internal Matrix ID is
 If some weird error is encountered, then a description of this error is
 written to the standard output.
 .Sh CREATING ROOMS
-.Nm matelcli
+.Nm matelcli createroom
 .Ar roomname topic permission
 creates a Matrix room whose display name and topic are
 .Ar roomname
