--- a/matelcli.1
+++ b/matelcli.1
@@ -150,7 +150,7 @@ command is used to fetch messages from Matrix rooms.
 .Pp
 .Ar roomId
 is of the format
-.Dq #[roomname]:[homeserver] .
+.Dq ![roomname]:[homeserver] .
 .Pp
 .Nm matelcli grab
 .Ar n
