s/Config.hs/.Pa Config.hs/

--- a/matelcli.1
+++ b/matelcli.1
@@ -179,7 +179,8 @@ marks the message whose message identifier is
 .Ar k
 as having been read.
 .Sh ENTERING THE MATRIX
-Using the username and password which are specified in Config.hs,
+Using the username and password which are specified in
+.Pa Config.hs ,
 .Nm matelcli login
 generates a new authorisation token for the user's Matrix account and
 prints this authorisation token to the standard output.
