s/Matel users/the users of Matel/

--- a/matelcli.1
+++ b/matelcli.1
@@ -329,7 +329,7 @@ however, re-writing these things should be reasonably easy for
 experienced Haskellers.  But inexperienced Haskellers need not worry;
 within reason, VARIK is willing to write custom
 .Dq Show
-instances for Matel users.  But men who wish to request custom
+instances for the users of Matel.  But men who wish to request custom
 .Dq Show
 instances should ensure that the desired
 .Dq Show
