Where appropriate, s/message/event/.

--- a/matelcli.1
+++ b/matelcli.1
@@ -174,13 +174,13 @@ fetches the
 .Ar n
 earliest messages of room
 .Ar roomId .
-.Sh MARKING MESSAGES AS HAVING BEEN READ
+.Sh MARKING EVENTS AS HAVING BEEN READ
 Where
 .Ar k
-is a message identifier which is known to be valid,
+is an event identifier which is known to be valid,
 .Nm matelcli markread
 .Ar k
-marks the message whose message identifier is
+marks the event whose event identifier is
 .Ar k
 as having been read.
 .Sh ENTERING THE MATRIX
