A sentence is shortened.

--- a/matelcli.1
+++ b/matelcli.1
@@ -177,7 +177,7 @@ earliest messages of room
 .Sh MARKING EVENTS AS HAVING BEEN READ
 Where
 .Ar k
-is an event identifier which is known to be valid,
+is a valid event identifier,
 .Nm matelcli markread
 .Ar k
 marks the event whose event identifier is
