--- a/matelcli.1
+++ b/matelcli.1
@@ -50,7 +50,7 @@ from
 .Ar reason
 .Sh DESCRIPTION
 .Nm matelcli
-is used to perform various Matrix-related tasks via a command-line
+performs various Matrix-related tasks via a command-line
 interface, as opposed to the terminal user interface of
 .Xr matel 1 .
 .Pp
