--- a/matelcli.1
+++ b/matelcli.1
@@ -108,7 +108,7 @@ matelcli send text dummies < methage
 .Ed
 .Pp
 Additionally, using the standard input-based approach facilitates
-sending arbitrary characters in the bodies of messages.
+including arbitrary characters in the bodies of messages.
 .Ss SENDING FILES
 .Nm matelcli send file
 .Ar path
