s/FQDN of the homeserver/password of the Matrix account/
Some dummies should remember to profread.

--- a/matel.1
+++ b/matel.1
@@ -61,7 +61,7 @@ field is the MXID of Matel's user, e.g.,
 .It Em PASSWORD
 The content of the
 .Dq password
-field is the FQDN of the homeserver of the user of
+field is the password of the Matrix account of the user of
 .Nm matel .
 .It Em AUTHTOKEN
 The content of the
